--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,25 @@ h1 {
   text-align: center;
 }
 h2 {
-  color: red;
+  color: white  ;
   font-weight: bolder;
 }
 .before, .during, .after{
 float: left;
 width: 20%;
-padding: 1%;
+padding: 2%;
+border: black solid;
+border-width: 1px 1px 1px 1px;
+margin: 0px 8px 0px 8px
+}
+.before {
+  background-color: skyblue;
+}
+.during {
+  background-color: blue;
+}
+.after {
+  background-color: darkblue;
 }
 nav {
   float: left;
@@ -29,4 +41,7 @@ h3 {
   font-weight: bolder;
   font-size: 2em;
   text-align: center;
+}
+p {
+  color: darkgrey;
 }
